0.3.3, 15.09.20:
  - ASTRA plugin:
    - renamed .get_field() to .read_field()
    - introduced .field field - .read_field() now also stores the field aside from returning z, Bz,
        and write_field analogously writes it to astra.field
    - expanded helptext to describe the handle's data fields
    - fixed read_zemit and trajectories not working (kek blunder)
    - temporarily disabled read_zemit, because no clue what the numbers mean, yet
    - .read_screens rewritten as .read_states - not dependent on runfile, flexible (regex & dataframes), and with initial beam state as well
    - added .read_last to only grab the first and last beam states only
    - .workspace() now sorts its output

  - Tracking presets:
    - ring preset: change default radius from 3mm to 1 mm; - 3 MeV Ekin, 10% sigma, uniform E distribution
    - added line preset: uniform line from -10 to 10 mm (sigmas); monochromatic
    - default beam + gen: gaussian bundle, 1x1x3mm (x,y,z); 3 MeV Ekin 1 % sigma; nemit_x,y 1
    - default runfile: disabled ref output; track from 0 to 4 m, state image every 10 cm

  - Track module:
    - can do state trafo to polar
    - correct phi and delta phi calculations

  - Demos:
    - Rotation from radius demo (via line, no correlation)
    - Rotation from energy demo (via ring)
    - Field scaling sweep demo - need to use ASTRA's loop controls.

0.3.2, 12.09.20:
  - ASTRA plugin:
    - wrote a helptext documenting the ASTRA plugin
    - changing track preset no longer tries to load the corresponding beam
    - changed interface formatting a bit
    - added ability to write beam.ini from beam dataframe
    - added verbosity control to frontend
    - .clean() now does not mop the field file and reloads the presets
    - caught a mistake that made saved presets unusable
    - have .generate() load the generated beam
    - is pretty much done for now, aside from, eventually, loading other output files

  - Tracking presets: